--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
