--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
