--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "sweetalert": "^2.1.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
