--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
+    "jalali-react-datepicker": "^1.2.1",
     "moment-jalaali": "^0.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
